--- a/cmake/tinyxml2.pc.in
+++ b/cmake/tinyxml2.pc.in
@@ -5,6 +5,6 @@ includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
 Name: TinyXML2
 Description: simple, small, C++ XML parser
-Version: @GENERIC_LIB_VERSION@
-Libs: -L${libdir} -ltinyxml2@LIB_POSTFIX@
+Version: @tinyxml2_VERSION@
+Libs: -L${libdir} -l$<TARGET_FILE_BASE_NAME:tinyxml2::tinyxml2>
 Cflags: -I${includedir}
