--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ windows-2019, macos-latest, ubuntu-20.04 ]
+        os: [ windows-2019, macos-latest, ubuntu-22.04, ubuntu-24.04 ]
         cmake: [ 3.15, 3.x ]
         include:
           - os: windows-2019
@@ -14,7 +14,9 @@ jobs:
             tree: tree /F
             CXX: cl
 
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
+            tree: tree
+          - os: ubuntu-24.04
             tree: tree
 
           - os: macos-latest
